Revision history for POE-Component-NetSNMP-agent

        [BUGFIX] Correctly work around an old NetSNMP::agent bug in GET mode.

0.300   2011.07.18  (SAPER)
        [FEATURE] Added Ping option to automatically recover from a lost
        connection with the AgentX master.
        [DIST] Add missing prereq parent.pm

0.200   2011.07.11  (SAPER)
        [BUGFIX] Rework the way communication sockets are managed to make
        the module work with NetSNMP::agent 5.4
        [FEATURE] Added Autohandle option, to provide an easy-to-use API
        a la SNMP::Extension::PassPersist.

0.100   2011.06.20  (SAPER)
        First version released.
